--- a/src/main/webapp/templates/tiles/top-menu.xhtml
+++ b/src/main/webapp/templates/tiles/top-menu.xhtml
@@ -5,8 +5,6 @@
       xmlns:p="http://primefaces.org/ui">
 <h:body>
   <h:form id="menuForm">
-    <p:growl id="messages" showDetail="true" showSummary="true"
-             autoUpdate="true" globalOnly="true"/>
     <p:menubar rendered="#{request.getUserPrincipal() != null}" toggleEvent="click">
       <p:menuitem action="/pages/index.xhtml?faces-redirect=true" onstart="PF('changePage').show()">
         <h:graphicImage library="img" name="favicon.png" height="15"/>
@@ -31,7 +29,7 @@
                            action="/selecionarSetor.xhtml?faces-redirect=true" ajax="false"
                            icon="fa fa-hospital-o" rendered="#{sessionController.setor != null}" onstart="PF('changePage').show()"/>
           <p:commandButton value="#{sessionController.username}"
-                           action="/pages/guia/index.xhtml?faces-redirect=true" ajax="false"
+                           action="/selecionarSetor.xhtml?faces-redirect=true" ajax="false"
                            icon="fa fa-user" rendered="#{request.getUserPrincipal() != null}"/>
           <p:commandButton value="Logout" action="#{sessionController.logout}"
                            icon="fa fa-sign-out"
