--- a/src/main/webapp/templates/tiles/top-menu.xhtml
+++ b/src/main/webapp/templates/tiles/top-menu.xhtml
@@ -13,15 +13,13 @@
                   action="/pages/user/list.xhtml?faces-redirect=true" ajax="false"
                   rendered="#{sessionController.isUserInRoles('ADMINISTRATOR')}"
                   icon="fa fa-user" onstart="PF('changePage').show()"/>
-      <p:menuitem value="Protocolos"
+      <p:menuitem value="Setores"
+                  action="/pages/setor/list.xhtml?faces-redirect=true" ajax="false"
+                  rendered="#{sessionController.isUserInRoles('ADMINISTRATOR')}"
+                  icon="fa fa-user" onstart="PF('changePage').show()"/>
+      <p:menuitem value="Movimentações"
                   action="/pages/protocolo/list.xhtml?faces-redirect=true" ajax="false"
                   icon="fa fa-file" onstart="PF('changePage').show()"/>
-      <p:menuitem value="Relatórios"
-                  action="/pages/relatorios/medias.xhtml?faces-redirect=true" ajax="false"
-                  icon="fa fa-bar-chart" onstart="PF('changePage').show()"/>
-      <p:menuitem value="Ajuda"
-                  action="/ajuda.xhtml?faces-redirect=true" ajax="false"
-                  icon="fa fa-book" onstart="PF('changePage').show()"/>
       <f:facet name="options">
 
         <h:panelGroup style="margin-top: 3px;" layout="block">
