--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -8,7 +8,7 @@
 <h:head>
   <title>PROTOCOLO v2.0</title>
   <h:outputStylesheet library="css" name="default.css"/>
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue-light_blue.min.css" />
+  <h:outputStylesheet library="css" name="material.min.css"/>
   <h:outputScript library="js" name="locales.js"/>
   <h:outputScript library="js" name="jquery.maskMoney.min.js"/>
   <h:outputScript library="js" name="guiabi.js"/>
