--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -17,7 +17,7 @@
   <h:outputScript library="js" name="jquery.maskedinput.min.js"/>
   <link rel="shortcut icon" type="image/x-icon"
         href="#{resource['img/favicon.ico']}"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+  <h:outputStylesheet library="css" name="material.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </h:head>
 <h:body>
