--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -59,6 +59,10 @@
       output.innerHTML = delta.toString();
     }
 
+    function updateTooltips() {
+      componentHandler.upgradeElements($('.vah-tooltip'));
+    }
+
   </script>
 </h:body>
 </html>
