--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -84,8 +84,8 @@ body {
   top: 10px;
   right: 10px;
   padding: 10px 10px 0;
-  background: rgba(53, 5, 5, 0.16);
-  border-radius: 10px;
+  background: rgb(255, 255, 255);
+  border-radius: 5px;
 }
 
 .masthead {
@@ -369,6 +369,10 @@ input.ui-state-disabled {
 
 .protocolo-title--recebido {
   color: #77c2cd;
+}
+
+.protocolo-title--recusado {
+  color: #cd5c34;
 }
 
 .selected-bg {
