--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -66,6 +66,10 @@
       componentHandler.upgradeElements($('.vah-tooltip'));
     }
 
+    function updateBtns() {
+      componentHandler.upgradeElements($('.vah-btn'));
+    }
+
   </script>
 </h:body>
 </html>
