--- a/src/main/webapp/templates/tiles/top-menu.xhtml
+++ b/src/main/webapp/templates/tiles/top-menu.xhtml
@@ -21,6 +21,15 @@
         <p:menuitem value="Salas"
                     action="/pages/sala/list.xhtml?faces-redirect=true" ajax="false"
                     icon="fa fa-hospital-o" onclick="PF('changePage').show()"/>
+        <p:menuitem value="Caixas"
+                    action="/pages/caixa/list.xhtml?faces-redirect=true" ajax="false"
+                    icon="fa fa-envelope" onclick="PF('changePage').show()"/>
+      </p:submenu>
+
+      <p:submenu icon="fa fa-search" label="Consultas">
+        <p:menuitem value="Contas"
+                    action="/pages/caixaEntrada/list.xhtml?faces-redirect=true" ajax="false"
+                    icon="fa fa-files-o" onclick="PF('changePage').show()"/>
       </p:submenu>
 
       <p:menuitem value="Protocolo"
@@ -29,11 +38,6 @@
       <p:menuitem value="SAME"
                   action="/pages/same/index.xhtml?faces-redirect=true" ajax="false"
                   icon="fa fa-archive" onclick="PF('changePage').show()"/>
-      <p:submenu icon="fa fa-search" label="Consultas">
-        <p:menuitem value="Contas"
-                    action="/pages/caixaEntrada/list.xhtml?faces-redirect=true" ajax="false"
-                    icon="fa fa-files-o" onclick="PF('changePage').show()"/>
-      </p:submenu>
 
       <f:facet name="options">
 
