--- a/src/main/webapp/templates/tiles/top-menu.xhtml
+++ b/src/main/webapp/templates/tiles/top-menu.xhtml
@@ -32,7 +32,7 @@
                     icon="fa fa-files-o" onclick="PF('changePage').show()"/>
         <p:menuitem value="Rastreabilidade"
                     action="/pages/paciente/paciente.xhtml?faces-redirect=true" ajax="false"
-                    icon="fa fa-files-o" onclick="PF('changePage').show()"/>
+                    icon="fa fa-binoculars" onclick="PF('changePage').show()"/>
       </p:submenu>
 
       <p:menuitem value="Protocolo"
